Added s3-bucket keys to sample configuration.

--- a/sample_configuration/disco_aws.ini
+++ b/sample_configuration/disco_aws.ini
@@ -27,6 +27,12 @@ default_domain_name=dev.sample_project.net
 default_domain_name@staging=staging.sample_project.net
 default_domain_name@production=production.sample_project.net
 default_product_line=teamname
+
+s3_bucket_base=asiaq-data-storage-sample-project
+s3_bucket_suffix=dev
+s3_bucket_suffix@staging=prod
+s3_bucket_suffix@production=prod
+
 default_ami_available_wait_time=600
 
 [test]
