use mhcbanana for integration tests
Also replace all references to mhcs3proxy in the sample configuration with
mhcbanana

--- a/sample_configuration/disco_alarms.ini
+++ b/sample_configuration/disco_alarms.ini
@@ -47,21 +47,21 @@ threshold_min=10
 [astro.EC2/Disk./dev/xvde.mhcntp]
 threshold_max=80
 
-# s3proxy alerts
-[astro.AWS/EC2.CPUUtilization.mhcs3proxy]
+# mhcbanana alerts
+[astro.AWS/EC2.CPUUtilization.mhcbanana]
 threshold_max=99
 custom_metric=false
 
-[astro.EC2/CPU.iowait.mhcs3proxy]
+[astro.EC2/CPU.iowait.mhcbanana]
 threshold_max=90
 
-[astro.EC2/CPU.steal.mhcs3proxy]
+[astro.EC2/CPU.steal.mhcbanana]
 threshold_max=90
 
-[astro.EC2/Memory.%MemFree.mhcs3proxy]
+[astro.EC2/Memory.%MemFree.mhcbanana]
 threshold_min=10
 
-[astro.EC2/Disk./dev/xvde.mhcs3proxy]
+[astro.EC2/Disk./dev/xvde.mhcbanana]
 threshold_max=80
 
 # adminproxy alerts
