--- a/sample_configuration/disco_aws.ini
+++ b/sample_configuration/disco_aws.ini
@@ -18,7 +18,6 @@ default_smoketest_termination=True
 default_instance_profile_name=instance_disco_common
 
 jump_box_hostclasses=mhcadminproxy
-http_proxy_hostclass=mhcs3proxy
 zookeeper_hostclass=mhczookeeper
 logger_hostclass=mhcdiscologger
 logforwarder_hostclass=mhclogforwarder
@@ -61,7 +60,7 @@ bakery_environment=build
 repo_hostclass=mhcdiscojenkins
 phase1_ami_name=centos6_phase1
 phase1_hostclass=mhcgeneric
-no_repo_hostclasses=mhcgeneric mhcdiscojenkins mhcs3proxy mhczookeeper mhcntp
+no_repo_hostclasses=mhcgeneric mhcdiscojenkins mhczookeeper mhcntp
 config_data_source=.
 asiaq_data_source=..  ; this will be rsync'd onto hostclasses during bake
 data_destination=/opt/wgen/discoaws
@@ -119,18 +118,6 @@ ip_address@production=10.103.0.7
 meta_network@deploy=tunnel
 ip_address@deploy=10.104.16.7
 
-[mhcs3proxy]
-meta_network=tunnel
-public_ip=True
-ip_address=10.101.16.6
-ip_address@build=10.100.16.6
-ip_address@ci=10.101.16.6
-ip_address@staging=10.102.16.6
-ip_address@production=10.103.16.6
-ip_address@deploy=10.104.16.6
-instance_profile_name=instance_eip_host
-enable_proxy=False
-
 [mhcadminproxy]
 # Vary your phase1 AMI if necessary
 # phase1_ami_name=centos7_phase1
@@ -141,3 +128,5 @@ meta_network=maintenance
 meta_network@build=tunnel
 instance_profile_name=instance_disco_adminproxy
 
+[mhcbanana]
+phase1_ami_name=centos7_phase1
