AL-1323 Fix Socify JSON fields. - Need to pass empty string not None if they are no values. - Error codes should be strings

--- a/sample_configuration/disco_aws.ini
+++ b/sample_configuration/disco_aws.ini
@@ -40,7 +40,7 @@ test_command=/opt/wgen/disco_integration_tests/bin/run_tests.sh
 test_user=disco_tester
 
 [socify]
-socify_baseurl=https://socify-ci.aws.wgen.net/soc
+socify_baseurl=https://socify-ci.aws.wgen.net
 
 [iam]
 saml_provider_name=
