spotints client testing

--- a/sample_configuration/disco_aws.ini
+++ b/sample_configuration/disco_aws.ini
@@ -25,6 +25,9 @@ project_name=sample_project
 default_domain_name=dev.sample_project.net
 default_domain_name@staging=staging.sample_project.net
 default_domain_name@production=production.sample_project.net
+default_spotinst_account_id=fooid
+default_spotinst_account_id@staging=foostageid
+default_spotinst_account_id@production=fooprodid
 default_product_line=teamname
 
 s3_bucket_base=asiaq-data-storage-sample-project
