add application tag to VPCs and nat gateways (#356)
* add application tag to VPCs and nat gateways

* copy vpc tags to subnet

* clean up

--- a/sample_configuration/disco_vpc.ini
+++ b/sample_configuration/disco_vpc.ini
@@ -21,6 +21,8 @@ tunnel_cidr=10.101.16.0/20
 dmz_cidr=10.101.32.0/20
 maintenance_cidr=10.101.48.0/20
 
+application=test
+
 tunnel_sg_rules=tcp all 80 443, tcp maintenance 22, udp all 123
 tunnel_igw_routes=0.0.0.0/0
 intranet_sg_rules=tcp all 0:65535, udp intranet 0:65535, tcp dmz 2181
